Added agenda into polish version

--- a/docker/pl/index.html
+++ b/docker/pl/index.html
@@ -49,6 +49,19 @@ MAINTAINER Michal Wojtowicz michal@wojtowicz.ovh
                 </section>
 
                 <section>
+                    <h3>Agenda</h3>
+                    <ol>
+                        <li class="fragment fade-up">Czym jest Docker?</li>
+                        <li class="fragment fade-up">Czym jest kontener?</li>
+                        <li class="fragment fade-up">Kernel namespaces</li>
+                        <li class="fragment fade-up">Docker image</li>
+                        <li class="fragment fade-up">Docker compose</li>
+                        <li class="fragment fade-up">CI/CD</li>
+                        <li class="fragment fade-up">AWS</li>
+                    </ol>
+                </section>
+
+                <section>
                     <section>
                         <h3>Produkty firmy Docker Inc.</h3>
                         <ul>
