--- a/docker/pl/index.html
+++ b/docker/pl/index.html
@@ -311,7 +311,7 @@ date: can't set date: Operation not permitted
                         </ul>
                     </section>
                     <section>
-                        <h3>Co jest wewnątrz docker image?</h3>
+                        <h3>Co znajduje się wewnątrz docker image?</h3>
                         <ul>
                             <li class="fragment fade-up">zależności konkretnej dystrybucji linuxa <a href="https://github.com/tianon/docker-brew-ubuntu-core/tree/46511cf49ad5d2628f3e8d88e1f8b18699a3ad8f/bionic">przykład - Ubuntu</a></li>
                             <li class="fragment fade-up">zbudowane zależności dla aplikacji</li>
@@ -531,7 +531,7 @@ deploy_production:
                         <h2>Security - pozbądź się przywilejów roota</h2>
                         <ul>
                             <li class="fragment fade-up">wdrażaj zasadę najwęższych potrzebnych uprawnień</li>
-                            <li class="fragment fade-up">Docker wymaga przywilejów roots by działać, kontenery nie</li>
+                            <li class="fragment fade-up">Docker wymaga przywilejów roota by działać, kontenery nie</li>
                             <li class="fragment fade-up">procesy działające wewnątrz kontenera niczym się nie różniąod innych</li>
                             <li class="fragment fade-up">większość obrazów działa na uprawnieniach roota i zostawiają TOBIE co z tym zrobić</li>
                         </ul>
