--- a/docker/pl/index.html
+++ b/docker/pl/index.html
@@ -601,6 +601,54 @@ USER appuser</code></pre>
                     </aside>
                 </section>
 
+
+                <section>
+                    <section>
+                        <h2>Powtórka</h2>
+                    </section>
+                    <section>
+                        <h3>Czym jest docker?</h3>
+                        <ul>
+                            <li class="fragment fade-up">program do obsługi kontenerów</li>
+                            <li class="fragment fade-up">najpopularniejszy</li>
+                            <li class="fragment fade-up">open-source</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3>Czym jest kontener?</h3>
+                        <ul>
+                            <li class="fragment fade-up">aplikacja ze wszystkimi jej zależnościami</li>
+                            <li class="fragment fade-up">nie jest zależna od systemu opracyjnego</li>
+                            <li class="fragment fade-up">działa wszędzie</li>
+                            <li class="fragment fade-up">jest lekki</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3>Jak tworzyć Docker images?</h3>
+                        <ul>
+                            <li class="fragment fade-up">składnia Dockerfile</li>
+                            <li class="fragment fade-up">problematyczne korzystanie z kontenerów z podmontowanym kodem</li>
+                            <li class="fragment fade-up">pilnuj uprawnień (security)</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3>Co wziąć pod uwagę przy korzystaniu z pipelines?</h3>
+                        <ul>
+                            <li class="fragment fade-up">brak standardu</li>
+                            <li class="fragment fade-up">problematyczne korzystanie z kontenerów z podmontowanym kodem</li>
+                            <li class="fragment fade-up">kontenery wspierające dostępne jako usługi sieciowe</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3>Jak AWS wspiera Dockera?</h3>
+                        <ul>
+                            <li class="fragment fade-up">ECS/Fargate</li>
+                            <li class="fragment fade-up">dedykowane zarządzanie kontenerami w ramach stacków/tasków</li>
+                            <li class="fragment fade-up">brak wsparcia dla rozwiązań open-source</li>
+                        </ul>
+                    </section>
+                </section>
+
                 <section>
                     <h1>Pytania?</h1>
                 </section>
