Sum-up: how to do docker images

--- a/docker/pl/index.html
+++ b/docker/pl/index.html
@@ -627,8 +627,10 @@ USER appuser</code></pre>
                         <h3>Jak tworzyć Docker images?</h3>
                         <ul>
                             <li class="fragment fade-up">składnia Dockerfile</li>
-                            <li class="fragment fade-up">problematyczne korzystanie z kontenerów z podmontowanym kodem</li>
+                            <li class="fragment fade-up">kontenery muszą być stateless</li>
+                            <li class="fragment fade-up">ogranicz build context</li>
                             <li class="fragment fade-up">pilnuj uprawnień (security)</li>
+                            <li class="fragment fade-up">korzystaj z multi-stage builds</li>
                         </ul>
                     </section>
                     <section>
