--- a/docker/pl/index.html
+++ b/docker/pl/index.html
@@ -661,8 +661,7 @@ USER appuser</code></pre>
                         <h3>Jak AWS wspiera Dockera?</h3>
                         <ul>
                             <li class="fragment fade-up">ECS/Fargate</li>
-                            <li class="fragment fade-up">dedykowane zarządzanie kontenerami w ramach stacków/tasków</li>
-                            <li class="fragment fade-up">brak wsparcia dla rozwiązań open-source</li>
+                            <li class="fragment fade-up">własna implementacja container orchestration</li>
                         </ul>
                     </section>
                 </section>
