Fixed some typos in Docker talk

--- a/docker/en/index.html
+++ b/docker/en/index.html
@@ -57,6 +57,7 @@ MAINTAINER Michal Wojtowicz michal@wojtowicz.ovh
                         <li class="fragment fade-up">Docker image</li>
                         <li class="fragment fade-up">Docker compose</li>
                         <li class="fragment fade-up">CI/CD</li>
+                        <li class="fragment fade-up">Security</li>
                         <li class="fragment fade-up">AWS</li>
                     </ol>
                 </section>
@@ -65,11 +66,10 @@ MAINTAINER Michal Wojtowicz michal@wojtowicz.ovh
                     <section>
                         <h3>Products of Docker Inc.</h3>
                         <ul>
-                            <li class="fragment fade-up">libcontainerd</li>
-                            <li class="fragment fade-up">Docker engine</li>
+                            <li class="fragment fade-up">libcontainerd (Docker engine)</li>
+                            <li class="fragment fade-up">Docker registry</li>
                             <li class="fragment fade-up">Docker hub</li>
                             <li class="fragment fade-up">Docker machine</li>
-                            <li class="fragment fade-up">Docker registry</li>
                             <li class="fragment fade-up">Docker-compose</li>
                             <li class="fragment fade-up">Docker swarm</li>
                         </ul>
@@ -97,10 +97,10 @@ MAINTAINER Michal Wojtowicz michal@wojtowicz.ovh
                     <section>
                         <h3>Docker alternatives</h3>
                         <ul>
-                            <li class="fragment fade-up">rkt - 2014 by CoreOS</li>
-                            <li class="fragment fade-up">LXD - 2014 by Canonical</li>
                             <li class="fragment fade-up">LXC - 2008 by the Kernel authors</li>
                             <li class="fragment fade-up">Linux VServer - 2008</li>
+                            <li class="fragment fade-up">LXD - 2014 by Canonical</li>
+                            <li class="fragment fade-up">rkt - 2014 by CoreOS</li>
                             <li class="fragment fade-up">Windows Containers - 2016</li>
                         </ul>
                     </section>
@@ -555,11 +555,14 @@ deploy_production:
                         </ul>
                     </section>
                     <section>
-<pre><code class="bash">
-$ docker run -v /root:/tmp/rootdir alpine:latest ls -la /tmp/rootdir
+<pre><code class="bash" data-trim data-noescape>
+$ sudo echo "SECRET STRING" > /root/secretFile.txt
+$ docker run <span class="fragment fade-up">-v /root:/tmp/rootdir</span> <span class="fragment fade-up">alpine:latest</span> <span class="fragment fade-up">ls -la /tmp/rootdir</span>
+<span class="fragment fade-up">
 drwxr-xr-x+  126 root  root       4032 Jun 21 13:43 .
 drwxr-xr-x     7 root  root        224 Jun 15 12:31 ..
 -rw-r--r--     1 root  root        266 Nov 26  2017 secretFile.txt
+</span>
 </code></pre>
                     </section>
                     <section>
@@ -597,7 +600,7 @@ USER appuser</code></pre>
                 </section>
 
                 <section>
-                    <h2>Next step - orchestrastion</h2>
+                    <h2>Next step - orchestration</h2>
                     <ul>
                         <li class="fragment fade-up">Docker Swarm</li>
                         <li class="fragment fade-up">Kubernetes</li>
