Fixed some typos in Docker talk

--- a/docker/pl/index.html
+++ b/docker/pl/index.html
@@ -605,8 +605,8 @@ USER appuser</code></pre>
                         <li class="fragment fade-up">AWS/Azure/Google solutions</li>
                     </ul>
                     <aside class="notes">
-                        Proces wdrażania wielu kontenerów wymaganych przez aplikację może być zautomatyzowane przez
-                        automatyzację. Staje się to tym bardziej pożądane, w miarę wzrostu zapotrzebowania
+                        Proces wdrażania wielu kontenerów wymaganych przez aplikację może być zautomatyzowany.
+                        Staje się to tym bardziej pożądane, w miarę wzrostu zapotrzebowania
                         na ilość kontenerów, oraz hostów które te kontenery utrzymują.
                         Ten szczególny typ automatyzacji nazywamy orchestration.
                         Może on w sobie zawierać różne funkcjonalności:
