--- a/docker/pl/index.html
+++ b/docker/pl/index.html
@@ -629,16 +629,16 @@ USER appuser</code></pre>
                         <h3>Czym jest docker?</h3>
                         <ul>
                             <li class="fragment fade-up">program do obsługi kontenerów</li>
-                            <li class="fragment fade-up">najpopularniejszy</li>
-                            <li class="fragment fade-up">open-source</li>
+                            <li class="fragment fade-up">open-source, ma konkurencję</li>
+                            <li class="fragment fade-up">działa na każdym systemie operacyjnym</li>
                         </ul>
                     </section>
                     <section>
                         <h3>Czym jest kontener?</h3>
                         <ul>
-                            <li class="fragment fade-up">aplikacja ze wszystkimi jej zależnościami</li>
-                            <li class="fragment fade-up">nie jest zależna od systemu opracyjnego</li>
-                            <li class="fragment fade-up">działa wszędzie</li>
+                            <li class="fragment fade-up">ma wszystko co potrzebne do uruchomienia aplikacji</li>
+                            <li class="fragment fade-up">nie jest zależny od systemu opracyjnego</li>
+                            <li class="fragment fade-up">nie ma tam zbędnych binarek</li>
                             <li class="fragment fade-up">jest lekki</li>
                         </ul>
                     </section>
