AWS Week - Part 1

--- a/aws/pl/index.html
+++ b/aws/pl/index.html
@@ -184,7 +184,7 @@
 
                         <ul>
                             <li class="fragment fade-up">zawiera pełen obraz instancji</li>
-                            <li class="fragment fade-up">obrazy mogą być płatne (np. AWS Linux)</li>
+                            <li class="fragment fade-up">obrazy mogą być płatne (np. Windows)</li>
                             <li class="fragment fade-up">AWS nie pobiera opłat za obrazy systemów open-source (np. Ubuntu)</li>
                             <li class="fragment fade-up">możliwośc przechowywania własnych AMI</li>
                         </ul>
@@ -199,7 +199,7 @@
                         </ul>
 
                         <aside class="notes">
-                            maszyny posiadające zasoby instance-store nie mają funkcji STOP
+                            maszyny mające root dir na instance-store nie mają funkcji STOP
                         </aside>
                     </section>
                     <section>
