--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <h2>Talks index</h2>
 
             <ul>
+                <li><a href="aws/pl/">AWS services</a></li>
                 <li><a href="docker/">Docker from scratch</a></li>
                 <li><a href="docker&k8s/pl/">Docker & Kubernetes</a></li>
                 <li><a href="js-event-loop/demo">JS Event Loop demos</a></li>
